--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -1,6 +1,14 @@
 name: Migrations CI
 
 on:
+  push:
+    branches:
+      - main
+      - feature/migrations-fix-tests
+    paths:
+      - "supabase/migrations/**"
+      - ".github/workflows/migrations.yml"
+
   pull_request:
     paths:
       - "supabase/migrations/**"
