--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@supabase/supabase-js": "^2.87.1",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -39,6 +40,6 @@
     "typescript": "^5",
     "@playwright/test": "^1.47.0",
     "wait-on": "^7.0.1",
-    "pgsql-ast-parser": "^1.22.0"
+    "pgsql-ast-parser": "^1.2.0"
   }
 }
