Update workflows: add push trigger for migrations checks

--- a/.github/workflows/check-archived-migrations.yml
+++ b/.github/workflows/check-archived-migrations.yml
@@ -1,6 +1,10 @@
 name: Check archived migrations
 
 on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'supabase/migrations/**'
   pull_request:
     paths:
       - 'supabase/migrations/**'
