docs: add fast run scripts notes; speed up lint & deploy commands

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint --cache --cache-location .eslintcache \"src/**\" \"scripts/**\"",
     "deploy:link": "npx vercel link",
-    "deploy:preview": "npm run build && npx vercel deploy --prebuilt",
-    "deploy:prod": "npm run build && npx vercel deploy --prod --prebuilt",
+    "deploy:preview": "npx vercel deploy --yes",
+    "deploy:prod": "npx vercel deploy --prod --yes",
+    "typecheck": "tsc --noEmit",
     "lint:migrations": "node ./scripts/check-migrations.js",
     "fix:migrations:enums": "node ./scripts/fix-enum-idempotency.js",
     "fix:migrations:enums:apply": "node ./scripts/fix-enum-idempotency.js --apply",
