--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "globals": "^16.5.0",
     "pgsql-ast-parser": "^1.2.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "typescript-eslint": "^8.50.0",
     "wait-on": "^7.0.1"
