fix: resolve build errors (retail service typo and mock-bank removal)

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,16 +1,9 @@
-node_modules
-build
-dist
+.env
+.env.local
 .git
-.trae
-.log
-.figma
-.next
-coverage
-screenshots
+.github
 docs
-**/*.md
-**/*.txt
-**/*.pdf
+scripts
 tests
-playwright.config.ts
+README.md
+*.sql
